--- a/com_joomlaquiz/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz/admin/models/forms/quiz.xml
@@ -402,33 +402,20 @@
 			<option value="0">COM_JOOMLAQUIZ_DONT_USE</option>
 			<option value="1">COM_JOOMLAQUIZ_RANDOM_QUESTIONS</option>
 			<option  value="2">COM_JOOMLAQUIZ_BY_CATEGORIES</option>
-			<option  value="3">COM_JOOMLAQUIZ_BY_PROBABILITY</option>
 		</field>
 		<field 
 			name="c_auto_breaks" 
 			type="text" 
-			default="0"
+			default="" 
 			size="3"
 			label="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT" 
 			labelclass="control-label" 
-			description="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR"
-			showon="c_pool:0,1,2" >
+			description="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR">
 		</field>
 		<field name="pool_rand" type="text" default="" size="10"
 				label="COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS" 
 				labelclass="control-label" description="COM_JOOMLAQUIZ_POOL_RAND_DESCR">
 		</field>
-		<field type="spacer" name="spacer" hr="true" />
-        <field name="c_prob_total_q"
-               type="number"
-               default="0"
-               size="10"
-               label="COM_JOOMLAQUIZ_PROBABILITY_TOTAL_QUESTIONS_LABEL"
-               description="COM_JOOMLAQUIZ_PROBABILITY_TOTAL_QUESTIONS_DESC"
-               labelclass="control-label"
-			   required="true"
-               showon="c_pool:3">
-        </field>
 	</fieldset>
 	<fieldset name="quiz_metadata_information"
 		label="COM_JOOMLAQUIZ_METADATA_INFORMATION"
