--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -410,11 +410,13 @@ blockquote span{
 .jq_time_tick_container{
 	display:block;
 }
+
 .jq_question_info_container {
 	text-align: center;
-	position: absolute;
+	/*position: absolute;*/
 	width: 100%;
 }
+	
 /*------------- progressbar ----------------*/
 .jq_progressbar{
 	width: 100%;
@@ -787,13 +789,12 @@ td.jq_match_image_element{
 }
 .jq_result_key{
 	font-size:13px;
-	margin-left: 38px;
 	float:left;
 }
 
 .jq_result_value
 {
-	float:right;
+	float:left;
 }
 .jq_result_bg{
 	background-color:#f5f5f5;
