--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -413,7 +413,7 @@ blockquote span{
 
 .jq_question_info_container {
 	text-align: center;
-	/*position: absolute;*/
+	position: absolute;
 	width: 100%;
 }
 	
