--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -437,21 +437,19 @@ blockquote span{
 .jq_question_text_cont{
 	padding-top: 1px;
 }
-/*#jq_quiz_container > :first-child{*/
-	/*margin-top: -40px;!* moves on one level with .jq_time_tick_container *!*/
-/*}*/
-.jq_question_info_container{
-	/*text-align: left;*/
-	text-align: center;
-	line-height: 18px;
-
-	/*position: absolute;*/
-	width: 100%;
+#jq_quiz_container > :first-child{
+	margin-top: -40px;/* moves on one level with .jq_time_tick_container */
 }
 .jq_question_name-wr,
 .jq_points_container,
 .jq_time_tick_container{
 	display:block;
+}
+
+.jq_question_info_container{
+	text-align: center;
+	position: absolute;
+	width: 100%;
 }
 	
 /*------------- progressbar ----------------*/
