Adding functionality to prohibit copiyng and printing quiz content

--- a/com_joomlaquiz/site/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz/site/assets/css/joomlaquiz.css
@@ -622,3 +622,10 @@ div.moduletable.joomlaquiz_container table.contentpaneopen h4 {
 		padding: 0; 
 	}
 }
+
+@media print {
+    body {
+        visibility: hidden;
+        display: none;
+    }
+}
