--- a/com_joomlaquiz_expert/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz_expert/admin/models/forms/quiz.xml
@@ -211,6 +211,15 @@
 			<option value="1">COM_JOOMLAQUIZ_TO_AUTHOR_EMAIL</option>
 			<option value="2">COM_JOOMLAQUIZ_LET_USER_WRITE</option>
 		</field>
+		<field name="c_email_to_introduction" type="editor" buttons="true" hide="pagebreak,readmore,testimonial"
+			class="inputbox"
+			filter="raw"
+			label="COM_JOOMLAQUIZ_USER_TO_INTRODUCTION" description="COM_JOOMLAQUIZ_USER_TO_INTRODUCTION_DESC" labelclass="control-label" required="false" />
+                
+		<field name="c_email_to_ending" type="editor" buttons="true" hide="pagebreak,readmore,testimonial"
+			class="inputbox"
+			filter="raw"
+			label="COM_JOOMLAQUIZ_USER_TO_ENDING" description="COM_JOOMLAQUIZ_USER_TO_ENDING_DESC" required="false" />
 		<field
 				name="c_email_chk"
 				type="radio"
