--- a/com_joomlaquiz_expert/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz_expert/admin/models/forms/quiz.xml
@@ -250,6 +250,17 @@
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
 		<field
+			name="c_resbytags"
+			type="radio"
+			class="btn-group"
+			label="COM_JOOMLAQUIZ_RESULTS_BY_TAGS_LABEL"
+			description="COM_JOOMLAQUIZ_RESULTS_BY_TAGS_DESC"
+			labelclass="control-label"
+			default="0">
+		  <option value="0">COM_JOOMLAQUIZ_NO</option>
+		  <option value="1">COM_JOOMLAQUIZ_YES</option>
+		</field>
+		<field
 				name="c_show_quest_pos"
 				type="radio"
 				class="btn-group"
