--- a/com_joomlaquiz/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz/admin/models/forms/quiz.xml
@@ -420,6 +420,7 @@
 			<option value="0">COM_JOOMLAQUIZ_DONT_USE</option>
 			<option value="1">COM_JOOMLAQUIZ_RANDOM_QUESTIONS</option>
 			<option  value="2">COM_JOOMLAQUIZ_BY_CATEGORIES</option>
+			<option value="3">COM_JOOMLAQUIZ_BY_TAGS</option>
 		</field>
 		<field 
 			name="c_auto_breaks" 
@@ -434,6 +435,14 @@
 				label="COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS" 
 				labelclass="control-label" description="COM_JOOMLAQUIZ_POOL_RAND_DESCR">
 		</field>
+		<field
+			name="by_tags"
+			type="subform"
+			formsource="administrator/components/com_joomlaquiz/models/forms/quiz_pool_tags.xml"
+			multiple="true"
+			label="COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_LABEL"
+			description="COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_DESC"
+			showon="c_pool:3" />
 	</fieldset>
 	<fieldset name="quiz_metadata_information"
 		label="COM_JOOMLAQUIZ_METADATA_INFORMATION"
