fixed progress bar displayÐ

--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -444,9 +444,20 @@ blockquote span{
 	/*text-align: left;*/
 	text-align: center;
 	line-height: 18px;
-
 	/*position: absolute;*/
 	width: 100%;
+}
+#jq_quiz_container .progress {
+	background: #fff;
+	border-radius: 0;
+	box-shadow: none;
+	height: auto;
+}
+.jq_question_info_container{
+	margin-bottom:0;
+}
+#jq_quiz_container .progress.active .bar{
+	height: 0.75rem;
 }
 .jq_question_name-wr,
 .jq_points_container,
