--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
@@ -1562,10 +1562,18 @@ div.jq_footer_link{
 	margin:0px auto;
 }
 
+.jq_cont_drag_div_wrap,
+.jq_draggable_div_wrap,
+.jq_draggable_stop_div_wrap
+{
+    text-align: center;
+    width: 50%;
+}
 div.jq_draggable_div {
 	position:relative;
-	width:250px;
-	height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
 	margin:10px;
 	background-color:#cccccc;
 	border: 1px solid #000;
@@ -1576,8 +1584,9 @@ div.jq_draggable_div {
 }
 div.jq_draggable_stop_div {
 	position:relative;
-	width:250px;
-	height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
 	margin:10px;
 	background: url(../images/drag_img.gif) no-repeat;
 	background-position:left;
@@ -1590,8 +1599,9 @@ div.jq_draggable_stop_div {
 }
 div.jq_cont_drag_div {
 	position:relative;
-	width:250px;
-	height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
 	margin:10px;
 	background: url(../images/cont_img.gif) no-repeat;
 	background-position:right;
