--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -476,10 +476,18 @@ div.jq_footer_link{
     margin:0px auto;
 }
 
+.jq_cont_drag_div_wrap,
+.jq_draggable_div_wrap,
+.jq_draggable_stop_div_wrap
+{
+    text-align: center;
+    width: 50%;
+}
 div.jq_draggable_div {
     position:relative;
-    width:250px;
-    height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
     margin:10px;
     /*background: url(images/drag_img.gif) no-repeat;
      background-position:left;*/
@@ -492,8 +500,9 @@ div.jq_draggable_div {
 }
 div.jq_draggable_stop_div {
     position:relative;
-    width:250px;
-    height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
     margin:10px;
     background: url(../images/drag_img.gif) no-repeat;
     background-position:left;
@@ -506,8 +515,9 @@ div.jq_draggable_stop_div {
 }
 div.jq_cont_drag_div {
     position:relative;
-    width:250px;
-    height:30px;/* !important always == 30px ! */
+    width:95%;
+    max-width:250px;
+    min-height:30px;/* !important always == 30px ! */
     margin:10px;
     background: url(../images/cont_img.gif) no-repeat;
     background-position:right;
