--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
@@ -858,8 +858,9 @@ div.jq_cont_drag_div {
 }
 div.jq_highlight_drag_div {
 	position:relative;
-	width:250px;
-	height:30px;/* !important always == 30px ! */
+	width:95%;
+	max-width:250px;
+	min-height:30px;/* !important always == 30px ! */
 	margin:10px;
 	background: #7FC1E8;
 	cursor:default;
