Removed the Progress Bar display over each question in the All questions on one page & Auto separated layout

--- a/com_joomlaquiz/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz/admin/models/forms/quiz.xml
@@ -255,6 +255,7 @@
 				label="COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL"
 				description="COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC"
 				labelclass="control-label"
+				showon="c_pagination:0"
 				default="0">
 				<option value="0">COM_JOOMLAQUIZ_NO</option>
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
