--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -655,7 +655,11 @@ td.jq_match_image_element{
 /* checkbox and radio questions */
 .quest_pos_td
 {
-	padding-right:15px;
+	/*padding-right:5px;*/
+}
+
+.quest_pos_td p{
+	margin-bottom: 0px;
 }
 
 .jq_mquestions,
@@ -665,6 +669,8 @@ td.jq_match_image_element{
 }
 .jq_input_pos{
 	text-align:left;
+	display: flex;
+	margin-top: 0px;
 }
 .jq_input_pos input{
 	margin:0;
@@ -679,7 +685,7 @@ td.jq_match_image_element{
 .jq_mresponse td:not(#foo)  > input[type='checkbox'] {
 	opacity: 0; 
 	float: left;
-	width: 18px;
+	width: 5px;
 }
 		
 .jq_mchoice .msq_option
