--- a/com_joomlaquiz_expert/site/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz_expert/site/assets/css/joomlaquiz.css
@@ -141,6 +141,10 @@ object{
 /* ------------bottom_container end--------------- */
 	
 /*------------questions-------------*/	
+.jq_mquestions .quest_pos p{
+	margin: 10px;
+}
+
 .jq_question_caption > div{
 	display:inline-block;
 	*zoom:1;
@@ -158,7 +162,8 @@ object{
 	margin:20px 0;
 }
 .jq_question_answers_cont input[type="radio"]{
-	margin-right: 3px;
+	/*margin-right: 3px;*/
+	margin: 5px;
 }
 
 .jq_quiz_align{
@@ -567,6 +572,7 @@ div.moduletable.joomlaquiz_container table.contentpaneopen h4 {
 .jq_input_pos label
 {
 	display:inline;
+	margin-right: 7px;
 }
 
 .jq_puzzle_img
