Moved the rule to another line

--- a/com_joomlaquiz/site/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz/site/assets/css/joomlaquiz.css
@@ -147,7 +147,9 @@ object{
 .quest_pos {
 	padding-right: 15px;
 
-}.jq_mquestions .quest_pos p{
+}
+
+.jq_mquestions .quest_pos p{
 	margin: 0px;
 }
 
