--- a/com_joomlaquiz/admin/models/forms/question.xml
+++ b/com_joomlaquiz/admin/models/forms/question.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldpath="/administrator/components/com_joomlaquiz/models/fields">
 	<fieldset name="question_details"
 		label="COM_JOOMLAQUIZ_SETTINGS_GLOBAL"
 		description="COM_JOOMLAQUIZ_QUESTION_GLOBAL_DESC"
-			  addfieldpath="/administrator/components/com_joomlaquiz/models/fields"
+		addfieldpath="/administrator/components/com_categories/models/fields"
 		>
 		
 		<field name="asset_id" type="hidden" filter="unset" />
@@ -26,17 +26,41 @@
 				<option value="0">COM_JOOMLAQUIZ_NO</option>
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
+		<!--
++		<field
++				name="c_show_timer"
++				type="radio"
++				class="btn-group"
++				label="COM_JOOMLAQUIZ_SHOW_TIMER"
++				labelclass="control-label"
++				default="0">
++				<option value="0">COM_JOOMLAQUIZ_NO</option>
++				<option value="1">COM_JOOMLAQUIZ_YES</option>
++		</field>
++		<field name="c_time_limit" type="text" default="" size="30"
++				label="COM_JOOMLAQUIZ_TIME_LIMIT3" 
++				description="COM_JOOMLAQUIZ_SPECIFY_THE_QUESTION_TIME" labelclass="control-label">
++		</field>
++		-->
 		<field name="c_separator" type="list" default="0" label="COM_JOOMLAQUIZ_SEPARATORLINE" labelclass="control-label">
 			<option value="0">COM_JOOMLAQUIZ_DO_NOT_ADD</option>
 			<option value="1">COM_JOOMLAQUIZ_ADD_SEPARATOR</option>
 		</field>
+
 		<field name="c_quiz_id" type="quizzes" label="COM_JOOMLAQUIZ_QUIZ" labelclass="control-label" required="false"/>
 		<field 
 			name="c_ques_cat" 
-			type="category" 
+			type="categoryedit" 
 			extension="com_joomlaquiz.questions" 
 			label="COM_JOOMLAQUIZ_QUESTION_CATEGORY2" 
 			description="COM_JOOMLAQUIZ_CHOOSE_THE_QUESTIONCAT" 
+		/>
+		<field name="tags"
+			   type="tag"
+			   mode="ajax"
+			   label="JTAG"
+			   description="JTAG_DESC"
+			   multiple="true"
 		/>
 		<field name="c_point" type="text" default="" size="30"
 				label="COM_JOOMLAQUIZ_POINTS" labelclass="control-label" required="false">
