--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -655,11 +655,7 @@ td.jq_match_image_element{
 /* checkbox and radio questions */
 .quest_pos_td
 {
-	/*padding-right:5px;*/
-}
-
-.quest_pos_td p{
-	margin-bottom: 0px;
+	padding-right:15px;
 }
 
 .jq_mquestions,
@@ -669,8 +665,6 @@ td.jq_match_image_element{
 }
 .jq_input_pos{
 	text-align:left;
-	display: flex;
-	margin-top: 0px;
 }
 .jq_input_pos input{
 	margin:0;
@@ -685,7 +679,7 @@ td.jq_match_image_element{
 .jq_mresponse td:not(#foo)  > input[type='checkbox'] {
 	opacity: 0; 
 	float: left;
-	width: 5px;
+	width: 18px;
 }
 		
 .jq_mchoice .msq_option
